...
            Text("NASA Astronomy Picture Of The Day")
                .font(.largeTitle)
                .bold()
                .padding()
            Text(viewModel.astro?.title ?? "")
                .font(.headline)
                .accessibilityIdentifier("astro_name")
            HStack {
                Text(viewModel.astro?.date ?? "")
                Button {
                    viewModel.favoriteAstro(context: context, descriptor: fetchDescriptor)
                } label: {
                    Image(systemName: viewModel.markAsFavorite ? "star.fill" : "star")
                        .tint(.yellow)
                        .contentTransition(.symbolEffect(.replace))
                        .symbolEffect(.bounce.down, value: viewModel.markAsFavorite)
                }
                .accessibilityIdentifier("favorite_button")
            }
        }
    }
    
    private func mediaContent() -> some View {
        VStack {
...
